Fixing link visibility

--- a/style/VIP.css
+++ b/style/VIP.css
@@ -9,7 +9,7 @@ body{
 }
 .link{
     color: gold;
-    text-decoration: none;
+    text-decoration: underline;
 }
 #pricesTable{
     margin-left: auto;
